--- a/login.html
+++ b/login.html
@@ -356,7 +356,7 @@ loginForm.addEventListener('submit', async (e) => {
       if (result.role === 'admin') {
         window.location.href = 'admin-dashboard.html';
       } else {
-        window.location.href = 'lessonmap/lesson-map.html';
+        window.location.href = 'lesson-map.html';
       }
     }, 1500);
   } else {
