--- a/login.html
+++ b/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -356,7 +355,7 @@ loginForm.addEventListener('submit', async (e) => {
       if (result.role === 'admin') {
         window.location.href = 'admin-dashboard.html';
       } else {
-        window.location.href = 'lesson-map.html';
+        window.location.href = 'lessonmap/lesson-map.html';
       }
     }, 1500);
   } else {
