--- a/lessonmap/lesson-map.html
+++ b/lessonmap/lesson-map.html
@@ -321,8 +321,8 @@ main {
   width: 100%;
   max-width: 400px;
   height: 100vh;
-  background: white;
-  box-shadow: -4px 0 20px rgba(0,0,0,0.3);
+  background: linear-gradient(to bottom, #1a4d7a 0%, #0f3c5f 100%);
+  box-shadow: -4px 0 20px rgba(0,0,0,0.4);
   z-index: 700;
   transform: translateX(100%);
   transition: transform 0.3s ease;
@@ -336,30 +336,35 @@ main {
 }
 
 .lb-header {
-  background: linear-gradient(135deg, #1b5583 0%, #0f3c5f 100%);
+  background: linear-gradient(135deg, #1a4d7a 0%, #0f3c5f 100%);
   color: white;
   padding: 1.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-shrink: 0;
+  border-bottom: 1px solid rgba(255,255,255,0.1);
 }
 
 .lb-header h2 {
   margin: 0;
   font-size: 1.3rem;
   font-weight: 800;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .lb-close {
-  background: transparent;
+  background: rgba(255,255,255,0.2);
   border: none;
   color: white;
   font-size: 1.5rem;
   cursor: pointer;
-  padding: 0;
-  width: 32px;
-  height: 32px;
+  padding: 4px 8px;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -367,71 +372,174 @@ main {
 }
 
 .lb-close:hover {
+  background: rgba(255,255,255,0.3);
   transform: rotate(90deg);
 }
 
 .lb-content {
   flex: 1;
   overflow-y: auto;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+/* YOUR STATS SECTION */
+.lb-stats-section {
+  background: rgba(76, 175, 80, 0.2);
+  border: 2px solid rgba(76, 175, 80, 0.5);
+  border-radius: 14px;
+  padding: 1.2rem;
+  text-align: center;
+  flex-shrink: 0;
+}
+
+.lb-stats-title {
+  color: rgba(255,255,255,0.9);
+  font-size: 0.75rem;
+  font-weight: 800;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+
+.lb-stats-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 12px;
+}
+
+.lb-stat {
+  background: rgba(76, 175, 80, 0.3);
+  border-radius: 10px;
   padding: 1rem;
+}
+
+.lb-stat-val {
+  color: #ffd700;
+  font-size: 2rem;
+  font-weight: 900;
+  line-height: 1;
+}
+
+.lb-stat-lbl {
+  color: rgba(255,255,255,0.8);
+  font-size: 0.75rem;
+  margin-top: 6px;
+  font-weight: 600;
+}
+
+/* STUDENTS LIST SECTION */
+.lb-list-section-title {
+  color: rgba(255,255,255,0.7);
+  font-size: 0.75rem;
+  font-weight: 800;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .lb-list {
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
 }
 
 .lb-item {
+  background: rgba(255,255,255,0.08);
+  border: 2px solid rgba(76, 175, 80, 0.3);
+  border-radius: 12px;
+  padding: 1rem;
   display: flex;
   align-items: center;
   gap: 12px;
-  padding: 0.75rem;
-  margin-bottom: 0.5rem;
-  background: #f5f5f5;
-  border-radius: 8px;
-  border-left: 4px solid transparent;
   transition: all 0.2s;
 }
 
 .lb-item:hover {
-  background: #efefef;
+  background: rgba(255,255,255,0.12);
+  border-color: rgba(76, 175, 80, 0.5);
+  transform: translateX(4px);
 }
 
 .lb-item.me {
-  background: #fffacd;
-  border-left-color: #ffd700;
-  font-weight: 700;
+  background: rgba(76, 175, 80, 0.25);
+  border-color: rgba(76, 175, 80, 0.6);
 }
 
 .lb-rank {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 900;
   min-width: 40px;
   text-align: center;
+  color: #ffd700;
 }
 
-.lb-rank.rank-1 { color: #ffd700; }
-.lb-rank.rank-2 { color: #c0c0c0; }
-.lb-rank.rank-3 { color: #cd7f32; }
+.lb-rank.r1 { font-size: 1.6rem; }
+.lb-rank.r2 { font-size: 1.5rem; }
+.lb-rank.r3 { font-size: 1.5rem; }
+
+.lb-info {
+  flex: 1;
+  text-align: left;
+}
 
 .lb-name {
-  flex: 1;
-  font-weight: 600;
-  color: #1b5583;
+  color: #e6eef4;
+  font-weight: 700;
   font-size: 0.95rem;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.lb-name-emoji {
+  font-size: 1.1rem;
+}
+
+.lb-lessons {
+  color: rgba(230, 238, 244, 0.7);
+  font-size: 0.8rem;
+  margin-top: 4px;
 }
 
 .lb-stars {
-  font-weight: 800;
+  display: flex;
+  align-items: center;
+  gap: 6px;
   color: #ffd700;
-  min-width: 50px;
-  text-align: right;
+  font-weight: 800;
+  font-size: 1rem;
 }
 
 .lb-loading {
   text-align: center;
-  padding: 2rem 1rem;
-  color: #999;
+  padding: 2rem 0;
+  color: rgba(255,255,255,0.6);
   font-size: 0.9rem;
+}
+
+.lb-refresh-btn {
+  background: rgba(255,255,255,0.12);
+  border: 2px solid rgba(76, 175, 80, 0.4);
+  color: #e6eef4;
+  border-radius: 10px;
+  padding: 12px;
+  width: 100%;
+  cursor: pointer;
+  font-size: 0.95rem;
+  font-weight: 700;
+  transition: all 0.2s;
+  flex-shrink: 0;
+  margin-top: auto;
+}
+
+.lb-refresh-btn:hover {
+  background: rgba(255,255,255,0.18);
+  border-color: rgba(76, 175, 80, 0.6);
 }
 
 @media (max-width: 480px) {
@@ -454,16 +562,16 @@ main {
 }
 
 .lb-content::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: transparent;
 }
 
 .lb-content::-webkit-scrollbar-thumb {
-  background: #1b5583;
+  background: rgba(255,255,255,0.2);
   border-radius: 3px;
 }
 
 .lb-content::-webkit-scrollbar-thumb:hover {
-  background: #0f3c5f;
+  background: rgba(255,255,255,0.4);
 }
 </style>
 </head>
@@ -481,9 +589,29 @@ main {
     <button class="lb-close" id="lbCloseBtn">✕</button>
   </div>
   <div class="lb-content">
-    <div class="lb-list" id="lbList">
-      <div class="lb-loading">Loading rankings...</div>
+    <!-- YOUR STATS -->
+    <div class="lb-stats-section">
+      <div class="lb-stats-title">Your Stats</div>
+      <div class="lb-stats-row">
+        <div class="lb-stat">
+          <div class="lb-stat-val" id="yourRank">#-</div>
+          <div class="lb-stat-lbl">Rank</div>
+        </div>
+        <div class="lb-stat">
+          <div class="lb-stat-val" id="yourStars">0</div>
+          <div class="lb-stat-lbl">Stars</div>
+        </div>
+      </div>
     </div>
+
+    <!-- TOP STUDENTS -->
+    <div class="lb-list-section-title">Top Students</div>
+    <div class="lb-list" id="lbList">
+      <div class="lb-loading">⏳ Loading...</div>
+    </div>
+
+    <!-- REFRESH BUTTON -->
+    <button class="lb-refresh-btn" id="refreshBtn">🔄 Refresh</button>
   </div>
 </div>
 
@@ -617,29 +745,41 @@ function displayLeaderboard() {
         .filter(u => u.role === 'student')
         .sort((a, b) => (b.stars || 0) - (a.stars || 0));
 
+      // Update YOUR STATS
+      const myIndex = students.findIndex(s => s.email === user.email);
+      const myData = students[myIndex];
+
+      if (myData) {
+        document.getElementById('yourRank').textContent = '#' + (myIndex + 1);
+        document.getElementById('yourStars').textContent = myData.stars || 0;
+      }
+
+      // Render students
+      const medalEmojis = ['🥇', '🥈', '🥉'];
+      const studentEmojis = ['🟠', '🟣', '🔵', '🟡', '🟢', '⭐', '💎', '🌟', '✨', '🎯'];
+
       students.forEach((student, i) => {
         const rank = i + 1;
         const isMe = student.email === user.email;
         
         let rankDisplay = '#' + rank;
-        let rankClass = '';
-        
-        if (rank === 1) {
-          rankDisplay = '🥇';
-          rankClass = 'rank-1';
-        } else if (rank === 2) {
-          rankDisplay = '🥈';
-          rankClass = 'rank-2';
-        } else if (rank === 3) {
-          rankDisplay = '🥉';
-          rankClass = 'rank-3';
+        if (rank <= 3) {
+          rankDisplay = medalEmojis[rank - 1];
         }
+
+        const studentEmoji = studentEmojis[i % studentEmojis.length];
 
         const item = document.createElement('div');
         item.className = 'lb-item' + (isMe ? ' me' : '');
         item.innerHTML = `
-          <div class="lb-rank ${rankClass}">${rankDisplay}</div>
-          <div class="lb-name">${student.name || 'Unknown'}${isMe ? ' 👈' : ''}</div>
+          <div class="lb-rank">${rankDisplay}</div>
+          <div class="lb-info">
+            <div class="lb-name">
+              <span class="lb-name-emoji">${studentEmoji}</span>
+              ${student.name || 'Unknown'}
+            </div>
+            <div class="lb-lessons">${student.lessons || 0}/5 lessons</div>
+          </div>
           <div class="lb-stars">⭐ ${student.stars || 0}</div>
         `;
         lbList.appendChild(item);
@@ -647,7 +787,7 @@ function displayLeaderboard() {
     })
     .catch(err => {
       console.error('Leaderboard fetch error:', err);
-      lbList.innerHTML = '<div class="lb-loading">❌ Error loading leaderboard</div>';
+      lbList.innerHTML = '<div class="lb-loading">❌ Error loading</div>';
     });
 }
 
@@ -655,6 +795,8 @@ function displayLeaderboard() {
 lbFab.addEventListener('click', toggleLeaderboard);
 lbCloseBtn.addEventListener('click', closeLeaderboard);
 lbOverlay.addEventListener('click', closeLeaderboard);
+
+document.getElementById('refreshBtn').addEventListener('click', displayLeaderboard);
 
 // Close on ESC key
 document.addEventListener('keydown', (e) => {
