--- a/lesson2/l2topic1.html
+++ b/lesson2/l2topic1.html
@@ -90,7 +90,6 @@ h2 {
   border-radius: 1rem;
   overflow: hidden;
   box-shadow: 0 4px 16px rgba(0,0,0,0.1);
-  position: relative;
 }
 
 .video-wrapper iframe {
@@ -129,23 +128,6 @@ button#nextBtn:disabled {
   font-size: 0.9rem;
   color: #666;
   font-weight: 600;
-}
-
-.progress-indicator {
-  width: 100%;
-  height: 8px;
-  background: #ddd;
-  border-radius: 4px;
-  margin-top: 8px;
-  overflow: hidden;
-}
-
-.progress-bar {
-  height: 100%;
-  background: linear-gradient(90deg, #1b5583, #0f3c5f);
-  width: 0%;
-  transition: width 0.1s linear;
-  border-radius: 4px;
 }
 
 #star-bar {
@@ -195,13 +177,6 @@ button#nextBtn:disabled {
     );
     opacity: 0;
   }
-}
-
-.timer-display {
-  font-size: 1.2rem;
-  font-weight: 700;
-  color: #1b5583;
-  margin-top: 0.5rem;
 }
 
 @media (max-width: 768px) {
@@ -267,14 +242,8 @@ button#nextBtn:disabled {
   <button id="nextBtn" disabled>Proceed to Topic 2 →</button>
   
   <p id="progress">
-    ⏱️ Watch the video to unlock the next page...
+    ⏱️ <span id="timerText">0/10</span> - Watch to unlock
   </p>
-
-  <div class="progress-indicator">
-    <div class="progress-bar" id="progressBar"></div>
-  </div>
-
-  <div class="timer-display" id="timerDisplay"></div>
 </main>
 
 <script type="module">
@@ -288,14 +257,12 @@ const VIDEO_DURATION = 10; // 10 seconds timer
 const TOPIC_ID = "l2topic1";
 const STARS_TO_EARN = 10;
 const NEXT_PAGE = "l2topic2.html";
-const MAP_PATH = "../lessonmap/lesson-map.html";
 // ============================================
 
 const nextBtn = document.getElementById("nextBtn");
 const progress = document.getElementById("progress");
 const starCountEl = document.getElementById("star-count");
-const progressBar = document.getElementById("progressBar");
-const timerDisplay = document.getElementById("timerDisplay");
+const timerText = document.getElementById("timerText");
 
 // Check authentication
 const user = getCurrentUser();
@@ -304,7 +271,10 @@ if (!user) {
   window.location.href = '../login.html';
 }
 
-console.log('✅ User:', user.name, '| Topic:', TOPIC_ID);
+console.log('✅ User:', user.name, 'UID:', user.uid, '| Topic:', TOPIC_ID);
+
+let topicCompleted = false;
+let starsEarned = false;
 
 // Load current stars
 async function loadCurrentStars() {
@@ -317,10 +287,11 @@ async function checkCompletion() {
   const progressData = await getProgressData(user.uid);
   
   if (progressData.completedTopics[TOPIC_ID]) {
+    topicCompleted = true;
+    starsEarned = true;
     nextBtn.disabled = false;
-    progress.textContent = "✅ Topic already completed! Click to proceed.";
-    timerDisplay.textContent = "";
-    console.log('✅ Topic already completed');
+    progress.textContent = "✅ Already completed! Click to proceed.";
+    console.log('✅ Topic already completed before');
   } else {
     startTimer();
   }
@@ -331,68 +302,49 @@ function startTimer() {
 
   const timerInterval = setInterval(() => {
     secondsWatched++;
-    const remaining = VIDEO_DURATION - secondsWatched;
-    const percent = (secondsWatched / VIDEO_DURATION) * 100;
-
-    // Update progress bar
-    progressBar.style.width = percent + '%';
-
-    // Update timer display
-    timerDisplay.textContent = `⏳ ${remaining}s remaining...`;
-
-    // Update progress text
-    progress.textContent = `Watching video... (${secondsWatched}/${VIDEO_DURATION}s)`;
+    timerText.textContent = `${secondsWatched}/${VIDEO_DURATION}`;
 
     if (secondsWatched >= VIDEO_DURATION) {
       clearInterval(timerInterval);
-      unlockButton();
+      unlockAndEarnStars();
     }
   }, 1000);
 }
 
-function unlockButton() {
-  nextBtn.disabled = false;
-  progress.innerHTML = '✅ Video watched! Click below to proceed and earn stars.';
-  timerDisplay.textContent = '';
-  progressBar.style.width = '100%';
-  progressBar.style.background = 'linear-gradient(90deg, #58cc02, #3cb043)';
+// Unlock button AND earn stars when timer completes
+async function unlockAndEarnStars() {
+  if (starsEarned) return; // Prevent double earning
   
-  // Play unlock sound effect (visual)
-  flashButton();
+  console.log('⏱️ Timer finished - earning stars...');
+  starsEarned = true;
+
+  nextBtn.disabled = false;
+  progress.innerHTML = '✅ Video watched! Click to proceed.';
+  
+  // Immediately save progress to Firebase
+  const result = await completeTopicInFirebase(user.uid, TOPIC_ID, STARS_TO_EARN);
+  
+  if (result.success) {
+    starCountEl.textContent = result.totalStars;
+    console.log(`✅ Stars earned! Total: ${result.totalStars}`);
+    rewardAnimation();
+  } else {
+    console.error('❌ Error earning stars:', result.error);
+  }
 }
 
-function flashButton() {
-  nextBtn.style.animation = 'pulse 0.6s ease-out';
-  setTimeout(() => {
-    nextBtn.style.animation = 'none';
-  }, 600);
-}
-
+// Button click just navigates to next page (no star earning here)
 nextBtn.addEventListener('click', async () => {
   if (nextBtn.disabled) return;
 
-  console.log('🎯 Completing topic...');
+  console.log('→ Proceeding to next topic...');
   nextBtn.disabled = true;
-  nextBtn.textContent = 'Saving progress...';
+  nextBtn.textContent = 'Loading...';
 
-  const result = await completeTopicInFirebase(user.uid, TOPIC_ID, STARS_TO_EARN);
-
-  if (result.success) {
-    nextBtn.textContent = `✅ +${STARS_TO_EARN} Stars! Going to next page...`;
-    starCountEl.textContent = result.totalStars;
-    
-    // Play celebration animations
-    rewardAnimation();
-
-    // Wait a moment for animations then proceed
-    setTimeout(() => {
-      window.location.href = NEXT_PAGE;
-    }, 1500);
-  } else {
-    progress.textContent = '❌ Error saving progress: ' + result.error;
-    nextBtn.disabled = false;
-    nextBtn.textContent = 'Proceed to Topic 2 →';
-  }
+  // Small delay for UX, then navigate
+  setTimeout(() => {
+    window.location.href = NEXT_PAGE;
+  }, 500);
 });
 
 function rewardAnimation() {
