--- a/lesson5/l5topic3.html
+++ b/lesson5/l5topic3.html
@@ -218,7 +218,7 @@ button#nextBtn:disabled {
 
 <header>
   <div class="heado">
-    <h1>Lesson 5 • Topic 3 - Introduction</h1>
+    <h1>Lesson 5 • Topic 3 - Mind Reset</h1>
     <div class="header-btns">
       <button class="back" onclick="history.back()">← Back</button>
       <button class="map-btn" onclick="window.location.href='../lessonmap/lesson-map.html'">🗺️ Map</button>
