--- a/lessonmap/lesson-map.html
+++ b/lessonmap/lesson-map.html
@@ -488,7 +488,7 @@ function renderLessons(completedLessons) {
     const finishContent = finishNode.querySelector('.finish-content');
     finishContent.addEventListener('click', () => {
       console.log('🏁 Finish line clicked! Going to congratulations...');
-      window.location.href = '../congratulations.html';
+      window.location.href = './congratulations.html';
     });
   }
 }
