--- a/congratulations.html
+++ b/congratulations.html
@@ -177,6 +177,8 @@ h1 {
   border-radius: 12px;
   padding: 16px;
   margin: 25px 0;
+  max-height: 200px;
+  overflow-y: auto;
 }
 
 .leaderboard-box h3 {
@@ -184,11 +186,6 @@ h1 {
   font-size: 1rem;
   margin: 0 0 12px 0;
   text-align: center;
-}
-
-.lb-preview {
-  max-height: 150px;
-  overflow-y: auto;
 }
 
 .lb-preview-item {
@@ -312,6 +309,13 @@ h1 {
   transform: translateY(-3px);
 }
 
+.loading-text {
+  text-align: center;
+  color: rgba(230,238,244,0.6);
+  padding: 20px;
+  font-size: 0.9rem;
+}
+
 .confetti {
   position: fixed;
   width: 10px;
@@ -330,13 +334,6 @@ h1 {
     transform: translateY(500px) rotate(720deg);
     opacity: 0;
   }
-}
-
-.loading-text {
-  text-align: center;
-  color: rgba(230,238,244,0.6);
-  padding: 20px;
-  font-size: 0.9rem;
 }
 
 @media (max-width: 480px) {
@@ -380,7 +377,7 @@ h1 {
 
     <div class="achievement-section">
       <div class="achievement-badge">⭐⭐⭐⭐⭐</div>
-      <h2 id="studentName" class="achievement-title">Student Name</h2>
+      <h2 id="studentName" class="achievement-title">Loading...</h2>
       <p class="achievement-text">Has Successfully Completed All 5 Lessons</p>
     </div>
 
@@ -406,8 +403,8 @@ h1 {
 
     <div class="leaderboard-box">
       <h3>🏅 Your Position on Leaderboard</h3>
-      <div class="lb-preview" id="lbPreview">
-        <div class="loading-text">Loading your rank...</div>
+      <div id="lbPreview">
+        <div class="loading-text">Loading...</div>
       </div>
     </div>
 
@@ -435,9 +432,9 @@ h1 {
 </main>
 
 <script type="module">
-import { getCurrentUser } from './firebase-config.js';
-import { getProgressData } from './progress-manager.js';
-import { db } from './firebase-config.js';
+import { getCurrentUser } from '../firebase-config.js';
+import { getProgressData } from '../progress-manager.js';
+import { db } from '../firebase-config.js';
 import { ref, get } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
 
 // Check authentication
@@ -447,54 +444,68 @@ if (!user) {
   window.location.href = '../login.html';
 }
 
-// Load progress
+console.log('✅ User:', user.name, 'Email:', user.email);
+
+// Load data
 async function loadData() {
   try {
+    // Get progress
     const progressData = await getProgressData(user.uid);
+    const totalStars = progressData.stars || 0;
 
+    // Update name and stars
     document.getElementById('studentName').textContent = user.name;
-    document.getElementById('totalStarsDisplay').textContent = progressData.stars;
+    document.getElementById('totalStarsDisplay').textContent = totalStars;
 
-    // Load leaderboard
+    console.log('📊 Loaded - Stars:', totalStars);
+
+    // Fetch leaderboard
     const snapshot = await get(ref(db, 'users'));
     const lbPreview = document.getElementById('lbPreview');
     lbPreview.innerHTML = '';
 
     if (snapshot.exists()) {
-      const users = Object.values(snapshot.val())
+      const allUsers = snapshot.val();
+      const students = Object.values(allUsers)
         .filter(u => u.role === 'student')
         .sort((a, b) => (b.stars || 0) - (a.stars || 0));
 
-      const myIndex = users.findIndex(u => u.email === user.email);
+      const myIndex = students.findIndex(u => u.email === user.email);
 
       if (myIndex >= 0) {
         document.getElementById('rankDisplay').textContent = '#' + (myIndex + 1);
       }
 
-      const toShow = users.slice(0, 3);
+      // Show top 3 + me
+      const toShow = [];
+      students.slice(0, 3).forEach(u => toShow.push(u));
       if (myIndex > 2) {
-        toShow.push(users[myIndex]);
+        toShow.push(students[myIndex]);
       }
 
       toShow.forEach((u) => {
         const isMe = u.email === user.email;
-        const rank = users.findIndex(x => x.email === u.email) + 1;
+        const rank = students.findIndex(x => x.email === u.email) + 1;
         const medal = rank === 1 ? '🥇' : rank === 2 ? '🥈' : rank === 3 ? '🥉' : '#' + rank;
 
         const item = document.createElement('div');
         item.className = 'lb-preview-item' + (isMe ? ' me' : '');
         item.innerHTML = `
           <div class="lb-preview-rank">${medal}</div>
-          <div class="lb-preview-name">${u.name || 'Unknown'}${isMe ? ' 👈' : ''}</div>
+          <div class="lb-preview-name">${u.name || 'Unknown'}${isMe ? ' (You)' : ''}</div>
           <div class="lb-preview-stars">⭐ ${u.stars || 0}</div>
         `;
         lbPreview.appendChild(item);
       });
+
+      console.log('🏆 Leaderboard loaded - Your rank:', myIndex + 1);
     }
 
     createConfetti();
+
   } catch (error) {
     console.error('❌ Error loading data:', error);
+    document.getElementById('studentName').textContent = user.name;
   }
 }
 
@@ -516,12 +527,13 @@ function createConfetti() {
   }
 }
 
+// Button events
 document.getElementById('viewLeaderboard').addEventListener('click', () => {
-  window.location.href = 'lesson-map.html';
+  window.location.href = '../lessonmap/lesson-map.html#leaderboard';
 });
 
 document.getElementById('backHome').addEventListener('click', () => {
-  window.location.href = 'lesson-map.html';
+  window.location.href = '../lessonmap/lesson-map.html';
 });
 
 loadData();
